--- a/app/assets/stylesheets/_users.scss
+++ b/app/assets/stylesheets/_users.scss
@@ -40,7 +40,7 @@ input#user_name,
      #user_email,
      #user_password,
      #user_password_confirmation,
-     .btn {
+     .btn.user {
   width: 60%;
   margin-bottom: 25px;
 }
